--- a/package.json
+++ b/package.json
@@ -9,10 +9,30 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/drawer": "^6.6.3",
+    "@react-navigation/material-bottom-tabs": "^6.2.16",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
+    "@shopify/flash-list": "1.4.3",
+    "axios": "^1.5.0",
     "expo": "~49.0.11",
+    "expo-clipboard": "~4.3.1",
+    "expo-file-system": "~15.4.4",
+    "expo-haptics": "~12.4.0",
+    "expo-image": "~1.3.3",
+    "expo-linear-gradient": "~12.3.0",
+    "expo-media-library": "~15.4.1",
     "expo-status-bar": "~1.6.0",
+    "expo-web-browser": "~12.3.2",
     "react": "18.2.0",
-    "react-native": "0.72.4"
+    "react-native": "0.72.4",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-paper": "^5.10.5",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-vector-icons": "^10.0.0",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
