--- a/app.json
+++ b/app.json
@@ -3,10 +3,11 @@
     "name": "CivitAI-RN",
     "slug": "CivitAI-RN",
     "scheme": "civitai-rn",
-    "version": "1.0.0",
+    "version": "0.0.1",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
+    "githubUrl": "https://github.com/SmashinFries/CivitAI-RN",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
@@ -22,13 +23,22 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.civitAiRN"
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
       "expo-router"
-    ]
+    ],
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "4681a90b-4400-40d3-9f51-0fa5d54f31f1"
+      }
+    }
   }
 }
