--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@shopify/flash-list": "1.4.3",
     "axios": "^1.5.0",
     "expo": "~49.0.11",
