--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-navigation/material-bottom-tabs": "^6.2.16",
     "@shopify/flash-list": "1.4.3",
     "axios": "^1.5.0",
     "expo": "~49.0.11",
