add OTA updates

--- a/app.json
+++ b/app.json
@@ -8,6 +8,9 @@
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "githubUrl": "https://github.com/SmashinFries/CivitAI-RN",
+    "updates": {
+      "checkAutomatically": "NEVER"
+    },
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
@@ -30,7 +33,13 @@
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      [
+        "expo-updates",
+        {
+          "username": "kuzutech"
+        }
+      ]
     ],
     "extra": {
       "router": {
