--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-media-library": "~15.4.1",
     "expo-router": "^2.0.0",
     "expo-status-bar": "~1.6.0",
+    "expo-updates": "~0.18.13",
     "expo-web-browser": "~12.3.2",
     "react": "18.2.0",
     "react-native": "0.72.4",
