--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "eslint --ext .tsx --ext .ts src/",
+    "lint-fix": "eslint ./src/**/*.tsx --fix",
+    "format": "prettier --check ./src",
+    "format-fix": "prettier --write ./src"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.18.2",
@@ -44,6 +48,15 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
+    "@typescript-eslint/eslint-plugin": "^6.7.3",
+    "@typescript-eslint/parser": "^6.7.3",
+    "eslint": "^8.50.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-native": "^4.1.0",
+    "prettier": "^3.0.3",
     "typescript": "^5.1.3"
   },
   "private": true
