--- a/eas.json
+++ b/eas.json
@@ -4,7 +4,13 @@
   },
   "build": {
     "development": {
-      "developmentClient": false,
+      "env": {
+        "APP_VARIANT": "development"
+    },
+      "android": {
+        "image": "latest"
+    },
+      "developmentClient": true,
       "distribution": "internal",
       "channel": "development"
     },
