--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo": "~49.0.11",
     "expo-clipboard": "~4.3.1",
     "expo-constants": "~14.4.2",
+    "expo-dev-client": "~2.4.12",
     "expo-file-system": "~15.4.4",
     "expo-haptics": "~12.4.0",
     "expo-image": "~1.3.3",
@@ -41,6 +42,7 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-tab-view": "^3.5.2",
+    "react-native-theme-switch-animation": "^0.4.1",
     "react-native-vector-icons": "^10.0.0",
     "react-query": "^3.39.3",
     "zustand": "^4.4.1"
